--- a/src/app/modules/tables/tables.component.scss
+++ b/src/app/modules/tables/tables.component.scss
@@ -1,4 +1,9 @@
 @import url(../../app.component.scss);
+table {
+    width: 96%;
+    margin: 2%;
+}
+
 // * {
 //     font-family: Kanit;
 //     font-style: normal;
