--- a/src/app/modules/insert/insert.component.scss
+++ b/src/app/modules/insert/insert.component.scss
@@ -1,4 +1,13 @@
 @import url(../../app.component.scss);
+table {
+    width: 96%;
+    margin: 2%;
+}
+
+th.mat-sort-header-sorted {
+    color: black;
+}
+
 // * {
 //     font-family: Kanit;
 //     font-style: normal;
