--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,5 @@
     font-weight: 600;
     font-size: 16px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
